added polyline symbol

--- a/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_operations_2.qrc
+++ b/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_operations_2.qrc
@@ -18,6 +18,7 @@
         <file>resources/draw.png</file>
         <file>resources/add_bucket.svg</file>
     	<file>resources/insert_circle.xpm</file>
+        <file>resources/insert_polyline.xpm</file>
     	<file>resources/demo_conic_circle.xpm</file>
         <file>resources/insert_bezier.xpm</file>
     	<file>resources/intersection.xpm</file>
