--- a/Boolean_set_operations_2/demo/Boolean_set_operations_2/UiFiles/Boolean_set_operations_2.ui
+++ b/Boolean_set_operations_2/demo/Boolean_set_operations_2/UiFiles/Boolean_set_operations_2.ui
@@ -55,7 +55,7 @@
     <addaction name="actionOpenLinear" />
     <addaction name="actionOpenDXF" />
     <addaction name="actionOpenBezier" />
-    <addaction name="actionOpenPolyline" />
+    <addaction name="actionOpenPolyline" />f
     <addaction name="separator" />
     <addaction name="actionSaveCurrentBucket" />
     <addaction name="separator" />
